--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.10"
 Flask = "^2.3.2"
 SQLAlchemy = "^2.0.17"
+requests = "^2.31.0"
 
 [tool.poetry.dev-dependencies]
 
