--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ python = "^3.10"
 Flask = "^2.3.2"
 SQLAlchemy = "^2.0.17"
 requests = "^2.31.0"
+bcrypt = "^4.0.1"
+flask-sqlalchemy = "^3.1.1"
+flask-login = "^0.6.2"
+app = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 
